# biotmpy

./: .gitignore  Dockerfile  LICENSE  README.md  conda_environment_lin.yml  conda_environment_win.yml  instances_annotated.pkl  paper_instance.pkl  paper_instances.pickle  requirements.txt  results.pickle  setup.cfg  setup.py
data/: tsv_example.tsv
data_structures/: document.py  relevance.py  report.py  sentence.py
datasets/: csv_example.xlsx  dictionary_example.txt  tsv_example.tsv  ~$csv_example.xlsx
examples_pipelines/: Biobert-Large.ipynb  DR_main_train_model.ipynb  DR_py_predict.py  DR_py_train_model.py  Embeddings_Comparison.ipynb  Gastric_Cancer.ipynb  Hierarchical.ipynb  Model_Evaluation.ipynb  Scibert.ipynb  cv_bert_dense.py  cv_bert_dense_ft.py  cv_biobert_cls.py  cv_biobert_cls_ft.py  cv_biobert_dense.py  cv_biobert_dense_ft.py  cv_biobert_lstm.py  cv_biobert_lstm_ft.py  cv_cnn_bilstm.py  cv_han.py  cv_scibert_cls.py  cv_scibert_cls_ft.py  cv_scibert_dense.py  cv_scibert_dense_ft.py  deepdta.py  embeddings_comparison_burns.py  embeddings_comparison_burns_ns.py  embeddings_comparison_han.py  embeddings_comparison_han_ns.py  hp_Bert_static.ipynb  hp_bert.py  hp_biobert_cls.py  hp_biobert_cls_ft.py  hp_biobert_dense_ft.py  hp_biobert_lstm.py  hp_biobert_lstm_ft.py  hp_cnn_bilstm.py  hp_hierarchical.ipynb  hp_hierarchical.py
mlearning/: attention.py  dl_config.py  dl_models.py  ml.py
pipelines/: Bert.ipynb  BlueBert.ipynb  Burns_CNNBiLSTM.ipynb  DR_py_predict.py  DR_py_train_model.py  Gastric_Cancer.ipynb  Model_Evaluation.ipynb  cv_bert_dense.py  (+27 more)
(+121 files in other folders)
