[metadata]
name = biotmpy
version = 0.0.0
description = BIOmedical Text Mining with PYthon
long_description = file: README.md
keywords = text-mining, biomedical literature, nlp, natural-language-processing, python, machine-learning, deep-learning
author = Nuno Alves
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
biotmpy = py.typed

[flake8]
max-line-length = 160